[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
yfinance = "^0.1.70"
requests = "^2.27.1"
schedule = "^1.1.0"
telebot = "^0.0.4"
pandas-datareader = "^0.10.0"
matplotlib = "^3.5.2"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"